[package]
name = "kernel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler_builtins = "*"
errchain     = { path = "../shared/errchain" }
rangeset     = { path = "../shared/rangeset" }
global_types = { path = "../shared/global_types" } 
core_arg     = { path = "../shared/core_arg" } 
