[package]
name = "rangeset"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errchain     = { path = "../errchain" }
global_types = { path = "../global_types" }
phys_mem     = { path = "../phys_mem" }
